# Telegram_Restricted_Media_Downloader

./: .gitignore  Dockerfile  LICENCE  README.md  build.py  docker-compose.yml  main.py  pymediainfo.nuitka-package.config.yml  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yml  build_release.yml  release_docker.yml  release_linux.yml  release_windows.yml
module/: __init__.py  app.py  bot.py  client.py  config.py  downloader.py  enum_define.py  enums.py  filter.py  language.py  parser.py  path_tool.py  process_path.py  stdio.py  task.py  tmux.py  ttyd.py  uploader.py  util.py  web.py
